# AgentFactory_improvements

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  deepagents-recursion-limit-fix.patch  pyproject.toml
frontend/content-studio/: index.html
frontend/content-studio/static/css/: style.css
frontend/content-studio/static/js/: app.js
frontend/video-studio/: index.html
frontend/video-studio/static/css/: style.css
frontend/video-studio/static/js/: app.js
